--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ body {
     font-size: 6em;
     text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.5);
     /* Neon text effect */
-    /* Add a subtle pulse animation to the game title */
+    /* Adds a pulse animation to the game title */
     animation: pulse 2s infinite;
 }
 
@@ -79,7 +79,7 @@ body {
     width: 125px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 0 10px rgba(255, 255, 255, 0.5);
     /* Glowing borders */
-    /* Add a glowing effect to the cards on hover */
+    /* Adds a glowing effect to the cards on hover */
     transition: box-shadow 0.5s ease-in-out;
 }
 
@@ -220,7 +220,6 @@ body {
 /* Styling for font icons inside the cards */
 .card-front i {
     font-size: 2em;
-    /* Adjust the size as needed */
 }
 
 /* Styling for the quotes container */
